add new elements

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a class="logo" href="./index.html" lang="en"
             >Web<span class="logo-black">Studio</span></a
           >
-          <ul class="menu list">
+          <ul class="menu">
             <li class="menu-item">
               <a class="menu-link current" href="./index.html">Студия</a>
             </li>
@@ -37,15 +37,21 @@
           </ul>
         </nav>
         <ul class="page-nav">
-          <li>
+          <li class="header-contact-item">
             <a class="contact-mail" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+              >info@devstudio.com
+              <svg class="mail-icon" width="16" height="12">
+                <use href="./images/sprite_opt.svg#icon-envelope"></use>
+              </svg>
+            </a>
           </li>
-          <li>
+          <li class="header-contact-item">
             <a class="contact-phone-number" href="tel:+38961111111"
-              >+38 096 111 11 11</a
-            >
+              >+38 096 111 11 11
+              <svg class="phone-icon" width="10" height="16">
+                <use href="./images/sprite_opt.svg#icon-smartphone"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
@@ -64,6 +70,11 @@
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="page-advantages-container">
             <li class="advantages-card">
+              <a class="advantages-list-link" href="">
+                <svg class="advantages-list-icon" width="70" height="70">
+                  <use href="./images/sprite_opt.svg#icon-antenna"></use>
+                </svg>
+              </a>
               <h3 class="title-advantages">Внимание к деталям</h3>
               <p class="description-advantages">
                 Идейные соображения, а также начало повседневной работы по
@@ -71,6 +82,11 @@
               </p>
             </li>
             <li class="advantages-card">
+              <a class="advantages-list-link" href="">
+                <svg class="advantages-list-icon" width="70" height="70">
+                  <use href="./images/sprite_opt.svg#icon-clock"></use>
+                </svg>
+              </a>
               <h3 class="title-advantages">Пунктуальность</h3>
               <p class="description-advantages">
                 Задача организации, в особенности же рамки и место обучения
@@ -78,6 +94,11 @@
               </p>
             </li>
             <li class="advantages-card">
+              <a class="advantages-list-link" href="">
+                <svg class="advantages-list-icon" width="70" height="70">
+                  <use href="./images/sprite_opt.svg#icon-diagram"></use>
+                </svg>
+              </a>
               <h3 class="title-advantages">Планирование</h3>
               <p class="description-advantages">
                 Равным образом консультация с широким активом в значительной
@@ -85,6 +106,11 @@
               </p>
             </li>
             <li class="advantages-card">
+              <a class="advantages-list-link" href="">
+                <svg class="advantages-list-icon" width="70" height="70">
+                  <use href="./images/sprite_opt.svg#icon-astronaut"></use>
+                </svg>
+              </a>
               <h3 class="title-advantages">Современные технологии</h3>
               <p class="description-advantages">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -141,6 +167,36 @@
               <div class="employees-card-content-wrapper">
                 <h3 class="employees-name">Игорь Демьяненко</h3>
                 <p class="employees-job" lang="en">Product Designer</p>
+                <ul class="employees-social-list list">
+                  <li class="social-item">
+                    <a href="" class="employees-social-link">
+                      <svg class="employees-social-icon" width="20" height="20">
+                        <use href="/images/sprite_opt.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="employees-social-link">
+                      <svg class="employees-social-icon" width="20" height="20">
+                        <use href="./images/sprite_opt.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="employees-social-link">
+                      <svg class="employees-social-icon" width="20" height="20">
+                        <use href="./images/sprite_opt.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="employees-social-link">
+                      <svg class="employees-social-icon" width="20" height="20">
+                        <use href="./images/sprite_opt.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="employees-card">
@@ -153,6 +209,36 @@
               <div class="employees-card-content-wrapper">
                 <h3 class="employees-name">Ольга Репина</h3>
                 <p class="employees-job" lang="en">Frontend Developer</p>
+                <ul class="employees-social-list list">
+                  <li class="social-item">
+                    <a href="" class="employees-social-link">
+                      <svg class="employees-social-icon" width="20" height="20">
+                        <use href="/images/sprite_opt.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="employees-social-link">
+                      <svg class="employees-social-icon" width="20" height="20">
+                        <use href="./images/sprite_opt.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="employees-social-link">
+                      <svg class="employees-social-icon" width="20" height="20">
+                        <use href="./images/sprite_opt.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="employees-social-link">
+                      <svg class="employees-social-icon" width="20" height="20">
+                        <use href="./images/sprite_opt.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="employees-card">
@@ -165,6 +251,36 @@
               <div class="employees-card-content-wrapper">
                 <h3 class="employees-name">Николай Тарасов</h3>
                 <p class="employees-job" lang="en">Marketing</p>
+                <ul class="employees-social-list list">
+                  <li class="social-item">
+                    <a href="" class="employees-social-link">
+                      <svg class="employees-social-icon" width="20" height="20">
+                        <use href="/images/sprite_opt.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="employees-social-link">
+                      <svg class="employees-social-icon" width="20" height="20">
+                        <use href="./images/sprite_opt.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="employees-social-link">
+                      <svg class="employees-social-icon" width="20" height="20">
+                        <use href="./images/sprite_opt.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="employees-social-link">
+                      <svg class="employees-social-icon" width="20" height="20">
+                        <use href="./images/sprite_opt.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="employees-card">
@@ -177,41 +293,156 @@
               <div class="employees-card-content-wrapper">
                 <h3 class="employees-name">Михаил Ермаков</h3>
                 <p class="employees-job" lang="en">UI Designer</p>
+                <ul class="employees-social-list list">
+                  <li class="social-item">
+                    <a href="" class="employees-social-link">
+                      <svg class="employees-social-icon" width="20" height="20">
+                        <use href="/images/sprite_opt.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="employees-social-link">
+                      <svg class="employees-social-icon" width="20" height="20">
+                        <use href="./images/sprite_opt.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="employees-social-link">
+                      <svg class="employees-social-icon" width="20" height="20">
+                        <use href="./images/sprite_opt.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="employees-social-link">
+                      <svg class="employees-social-icon" width="20" height="20">
+                        <use href="./images/sprite_opt.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
+    <!--CLIENTS-->
+    <section class="section page-clients">
+      <div class="container">
+        <h2 class="section-title">Постоянные клиенты</h2>
+        <ul class="list-clients">
+          <li class="image-client">
+            <a class="clients-list-link" href="">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/sprite_opt.svg#icon-client-logo"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="image-client">
+            <a class="clients-list-link" href="">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/sprite_opt.svg#icon-client-logo-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="image-client">
+            <a class="clients-list-link" href="">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/sprite_opt.svg#icon-client-logo-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="image-client">
+            <a class="clients-list-link" href="">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/sprite_opt.svg#icon-client-logo-3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="image-client">
+            <a class="clients-list-link" href="">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/sprite_opt.svg#icon-client-logo-4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="image-client">
+            <a class="clients-list-link" href="">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/sprite_opt.svg#icon-client-logo-5"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
     <!--FOOTER-->
     <footer class="background-footer">
-      <div class="container">
-        <a class="logo-footer logo" href="./index.html" lang="en"
-          >Web<span class="logo-white">Studio</span></a
-        >
-        <address>
-          <ul>
-            <li>
-              <a
-                class="location"
-                href="https://goo.gl/maps/pXE2QNJU4stwtCro8"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+      <div class="container footer-wrap">
+        <div class="address-footer-wrap">
+          <a class="logo-footer logo" href="./index.html" lang="en"
+            >Web<span class="logo-white">Studio</span></a
+          >
+          <address>
+            <ul>
+              <li>
+                <a
+                  class="location"
+                  href="https://goo.gl/maps/pXE2QNJU4stwtCro8"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li>
+                <a class="contact-mail-footer" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li>
+                <a class="contact-phone-number-footer" href="tel:+380991111111"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div>
+          <p class="join">присоединяйтесь</p>
+          <ul class="join-social-list list">
+            <li class="social-item">
+              <a href="" class="social-link-footer">
+                <svg class="social-icon-footer" width="20" height="20">
+                  <use href="/images/sprite_opt.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a class="contact-mail-footer" href="mailto:info@example.com"
-                >info@example.com</a
-              >
+            <li class="social-item">
+              <a href="" class="social-link-footer">
+                <svg class="social-icon-footer" width="20" height="20">
+                  <use href="./images/sprite_opt.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a class="contact-phone-number-footer" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
+            <li class="social-item">
+              <a href="" class="social-link-footer">
+                <svg class="social-icon-footer" width="20" height="20">
+                  <use href="./images/sprite_opt.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link-footer">
+                <svg class="social-icon-footer" width="20" height="20">
+                  <use href="./images/sprite_opt.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
