--- a/portfolio.html
+++ b/portfolio.html
@@ -37,15 +37,21 @@
           </ul>
         </nav>
         <ul class="page-nav">
-          <li>
+          <li class="header-contact-item">
             <a class="contact-mail" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+              >info@devstudio.com
+              <svg class="mail-icon" width="16" height="12">
+                <use href="./images/sprite_opt.svg#icon-envelope"></use>
+              </svg>
+            </a>
           </li>
-          <li>
+          <li class="header-contact-item">
             <a class="contact-phone-number" href="tel:+38961111111"
-              >+38 096 111 11 11</a
-            >
+              >+38 096 111 11 11
+              <svg class="phone-icon" width="10" height="16">
+                <use href="./images/sprite_opt.svg#icon-smartphone"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
@@ -83,123 +89,145 @@
           <!--PROJECTS-->
           <h2 class="visually-hidden">Наши проекты</h2>
           <ul class="projects-foto projects-container">
-            <li class="projects-card">
-              <img
-                src="./images/portfolio-projects/tehnokryak.jpg"
-                alt="Веб-сайт"
-                width="370"
-                height="294"
-              />
-              <div class="project-card-content-wrapper">
-                <h2 class="img-project">Технокряк</h2>
-                <p class="description-project">Веб-сайт</p>
-              </div>
+            <li class="projects-card menu-projects-hover">
+              <a class="menu-projects-description" href="">
+                <img
+                  src="./images/portfolio-projects/tehnokryak.jpg"
+                  alt="Веб-сайт"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-card-content-wrapper">
+                  <h2 class="img-project">Технокряк</h2>
+                  <p class="description-project">Веб-сайт</p>
+                </div>
+              </a>
             </li>
-            <li class="projects-card">
-              <img
-                src="./images/portfolio-projects/poster-basket.jpg"
-                alt="Постер баскетболл"
-                width="370"
-                height="294"
-              />
-              <div class="project-card-content-wrapper">
-                <h2 class="img-project">
-                  Постер<span lang="en"> Orlean vs Golden Star</span>
-                </h2>
-                <p class="description-project">Дизайн</p>
-              </div>
+            <li class="projects-card menu-projects-hover">
+              <a class="menu-projects-description" href="">
+                <img
+                  src="./images/portfolio-projects/poster-basket.jpg"
+                  alt="Постер баскетболл"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-card-content-wrapper">
+                  <h2 class="img-project">
+                    Постер<span lang="en"> Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="description-project">Дизайн</p>
+                </div>
+              </a>
             </li>
-            <li class="projects-card">
-              <img
-                src="./images/portfolio-projects/restorant-seafood.jpg"
-                alt="Ресторан"
-                width="370"
-                height="294"
-              />
-              <div class="project-card-content-wrapper">
-                <h2 class="img-project">
-                  Ресторан<span lang="en"> Seafood</span>
-                </h2>
-                <p class="description-project">Приложение</p>
-              </div>
+            <li class="projects-card menu-projects-hover">
+              <a class="menu-projects-description" href="">
+                <img
+                  src="./images/portfolio-projects/restorant-seafood.jpg"
+                  alt="Ресторан"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-card-content-wrapper">
+                  <h2 class="img-project">
+                    Ресторан<span lang="en"> Seafood</span>
+                  </h2>
+                  <p class="description-project">Приложение</p>
+                </div>
+              </a>
             </li>
-            <li class="projects-card">
-              <img
-                src="./images/portfolio-projects/project-prime.jpg"
-                alt="Проект Prime"
-                width="370"
-                height="294"
-              />
-              <div class="project-card-content-wrapper">
-                <h2 class="img-project">Проект<span lang="en"> Prime</span></h2>
-                <p class="description-project">Маркетинг</p>
-              </div>
+            <li class="projects-card menu-projects-hover">
+              <a class="menu-projects-description" href="">
+                <img
+                  src="./images/portfolio-projects/project-prime.jpg"
+                  alt="Проект Prime"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-card-content-wrapper">
+                  <h2 class="img-project">
+                    Проект<span lang="en"> Prime</span>
+                  </h2>
+                  <p class="description-project">Маркетинг</p>
+                </div>
+              </a>
             </li>
-            <li class="projects-card">
-              <img
-                src="./images/portfolio-projects/project-boxes.jpg"
-                alt="Проект Boxes"
-                width="370"
-                height="294"
-              />
-              <div class="project-card-content-wrapper">
-                <h2 class="img-project">Проект<span lang="en"> Boxes</span></h2>
-                <p class="description-project">Приложение</p>
-              </div>
+            <li class="projects-card menu-projects-hover">
+              <a class="menu-projects-description" href="">
+                <img
+                  src="./images/portfolio-projects/project-boxes.jpg"
+                  alt="Проект Boxes"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-card-content-wrapper">
+                  <h2 class="img-project">
+                    Проект<span lang="en"> Boxes</span>
+                  </h2>
+                  <p class="description-project">Приложение</p>
+                </div>
+              </a>
             </li>
-            <li class="projects-card">
-              <img
-                src="./images/portfolio-projects/inspiration.jpg"
-                alt="Веб-сайт"
-                width="370"
-                height="294"
-              />
-              <div class="project-card-content-wrapper">
-                <h2 class="img-project">
-                  <span lang="en">Inspiration has no Borders</span>
-                </h2>
-                <p class="description-project">Веб-сайт</p>
-              </div>
+            <li class="projects-card menu-projects-hover">
+              <a class="menu-projects-description" href="">
+                <img
+                  src="./images/portfolio-projects/inspiration.jpg"
+                  alt="Веб-сайт"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-card-content-wrapper">
+                  <h2 class="img-project">
+                    <span lang="en">Inspiration has no Borders</span>
+                  </h2>
+                  <p class="description-project">Веб-сайт</p>
+                </div>
+              </a>
             </li>
-            <li class="projects-card">
-              <img
-                src="./images/portfolio-projects/limited-edition.jpg"
-                alt="Издание LE"
-                width="370"
-                height="294"
-              />
-              <div class="project-card-content-wrapper">
-                <h2 class="img-project">
-                  Издание <span lang="en">Limited Edition</span>
-                </h2>
-                <p class="description-project">Дизайн</p>
-              </div>
+            <li class="projects-card menu-projects-hover">
+              <a class="menu-projects-description" href="">
+                <img
+                  src="./images/portfolio-projects/limited-edition.jpg"
+                  alt="Издание LE"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-card-content-wrapper">
+                  <h2 class="img-project">
+                    Издание <span lang="en">Limited Edition</span>
+                  </h2>
+                  <p class="description-project">Дизайн</p>
+                </div>
+              </a>
             </li>
-            <li class="projects-card">
-              <img
-                src="./images/portfolio-projects/project-lab.jpg"
-                alt="Проект LAB"
-                width="370"
-                height="294"
-              />
-              <div class="project-card-content-wrapper">
-                <h2 class="img-project">Проект<span lang="en"> LAB</span></h2>
-                <p class="description-project">Маркетинг</p>
-              </div>
+            <li class="projects-card menu-projects-hover">
+              <a class="menu-projects-description" href="">
+                <img
+                  src="./images/portfolio-projects/project-lab.jpg"
+                  alt="Проект LAB"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-card-content-wrapper">
+                  <h2 class="img-project">Проект<span lang="en"> LAB</span></h2>
+                  <p class="description-project">Маркетинг</p>
+                </div>
+              </a>
             </li>
-            <li class="projects-card">
-              <img
-                src="./images/portfolio-projects/growing-business.jpg"
-                alt="Приложение"
-                width="370"
-                height="294"
-              />
-              <div class="project-card-content-wrapper">
-                <h2 class="img-project">
-                  <span lang="en">Growing Business</span>
-                </h2>
-                <p class="description-project">Приложение</p>
-              </div>
+            <li class="projects-card menu-projects-hover">
+              <a class="menu-projects-description" href="">
+                <img
+                  src="./images/portfolio-projects/growing-business.jpg"
+                  alt="Приложение"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-card-content-wrapper">
+                  <h2 class="img-project">
+                    <span lang="en">Growing Business</span>
+                  </h2>
+                  <p class="description-project">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -207,33 +235,68 @@
     </main>
     <!--FOOTER-->
     <footer class="background-footer">
-      <div class="container">
-        <a class="logo-footer logo" href="./index.html" lang="en"
-          >Web<span class="logo-white">Studio</span></a
-        >
-        <address>
-          <ul>
-            <li>
-              <a
-                class="location"
-                href="https://goo.gl/maps/pXE2QNJU4stwtCro8"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+      <div class="container footer-wrap">
+        <div class="address-footer-wrap">
+          <a class="logo-footer logo" href="./index.html" lang="en"
+            >Web<span class="logo-white">Studio</span></a
+          >
+          <address>
+            <ul>
+              <li>
+                <a
+                  class="location"
+                  href="https://goo.gl/maps/pXE2QNJU4stwtCro8"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li>
+                <a class="contact-mail-footer" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li>
+                <a class="contact-phone-number-footer" href="tel:+380991111111"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div>
+          <p class="join">присоединяйтесь</p>
+          <ul class="join-social-list list">
+            <li class="social-item">
+              <a href="" class="social-link-footer">
+                <svg class="social-icon-footer" width="20" height="20">
+                  <use href="/images/sprite_opt.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a class="contact-mail-footer" href="mailto:info@example.com"
-                >info@example.com</a
-              >
+            <li class="social-item">
+              <a href="" class="social-link-footer">
+                <svg class="social-icon-footer" width="20" height="20">
+                  <use href="./images/sprite_opt.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a class="contact-phone-number-footer" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
+            <li class="social-item">
+              <a href="" class="social-link-footer">
+                <svg class="social-icon-footer" width="20" height="20">
+                  <use href="./images/sprite_opt.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link-footer">
+                <svg class="social-icon-footer" width="20" height="20">
+                  <use href="./images/sprite_opt.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
