--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
             <li class="social-item">
               <a href="" class="social-link-footer">
                 <svg class="social-icon-footer" width="20" height="20">
-                  <use href="/images/sprite_opt.svg#icon-instagram"></use>
+                  <use href="./images/sprite_opt.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
