--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
                   <li class="social-item">
                     <a href="" class="employees-social-link">
                       <svg class="employees-social-icon" width="20" height="20">
-                        <use href="/images/sprite_opt.svg#icon-instagram"></use>
+                        <use
+                          href="./images/sprite_opt.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -213,7 +215,9 @@
                   <li class="social-item">
                     <a href="" class="employees-social-link">
                       <svg class="employees-social-icon" width="20" height="20">
-                        <use href="/images/sprite_opt.svg#icon-instagram"></use>
+                        <use
+                          href="./images/sprite_opt.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -255,7 +259,9 @@
                   <li class="social-item">
                     <a href="" class="employees-social-link">
                       <svg class="employees-social-icon" width="20" height="20">
-                        <use href="/images/sprite_opt.svg#icon-instagram"></use>
+                        <use
+                          href="./images/sprite_opt.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
